CSS Fixes
Fixed some of the css on the "DEGListDatasets" component as well as the volcano plot component. This way the container adjusts to the size of the content instead of overlapping the bottom of the second plot

--- a/dv-site/src/graphs/PlotlyGraph.css
+++ b/dv-site/src/graphs/PlotlyGraph.css
@@ -9,5 +9,6 @@
   margin-left: 0vw;
   margin-right: 0vw;
   margin-top: 0vw;
+  margin-bottom: 30px;
   overflow: hidden;
 }
